[gd_scene load_steps=4 format=3 uid="uid://dci144io03ffa"]

[ext_resource type="StyleBox" uid="uid://ci3yyoa54a17w" path="res://Theme/YellowPanel.tres" id="1_ydicf"]
[ext_resource type="Script" uid="uid://dvx4hdp7fvbi0" path="res://Scripts/fleet_separation_ship_viz.gd" id="2_f1v6n"]
[ext_resource type="Texture2D" uid="uid://cabyq8qd4qe5y" path="res://Assets/CaptainPortraits/Captain1.png" id="4_5k7vr"]

[node name="FleetSeparationShipViz" type="PanelContainer" node_paths=PackedStringArray("CapPortrait", "CapName")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -121.0
offset_top = -52.0
offset_right = 121.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("1_ydicf")
script = ExtResource("2_f1v6n")
CapPortrait = NodePath("VBoxContainer/CapPortrait")
CapName = NodePath("VBoxContainer/CapName")

[node name="Button" type="Button" parent="." groups=["DigitalButtons"]]
layout_mode = 2
focus_mode = 0
action_mode = 0

[node name="VBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="CapName" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Craden"
horizontal_alignment = 2

[node name="CapPortrait" type="TextureRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 10
mouse_filter = 2
texture = ExtResource("4_5k7vr")
expand_mode = 1
stretch_mode = 5

[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
